<resources>
    <string name="app_name">My Footprint</string>
    <string name="action_settings">Settings</string>

    <!--NAVIGATION-->
    <string name="totals">Totals</string>
    <string name="averages">Averages</string>
    <string name="home">Home</string>
    <string name="numbers">Numbers</string>
    <string name="recyclables">recyclables</string>
    <string name="next">Next</string>

    <!--BANNERS-->
    <string name="transportation_banner">How did you travel today?</string>
    <string name="car_transportation_banner">Car Transportation</string>
    <string name="train_transportation">Train Transportation</string>
    <string name="non_motor_banner">Non-Motor Transportation</string>
    <string name="purchases_banner">What did you buy today?</string>
    <string name="recycling_banner">What did you recycle today?</string>
    <string name="calulating">Calculating...</string>


    <!--Transportation-->
    <string name="car">Car</string>
    <string name="train">Train</string>
    <string name="non_motor">Non-Motor</string>
    <string name="none">None</string>
    <string name="car_input_label">I drove this many minutes in my car today:</string>
    <string name="car_input_milage">On average, how many miles per gallon does your car get?</string>
    <string name="car_input_people">How many people were in the car?</string>
    <string name="non_motor_input_label">In replace of using a motor vehicle, I traveled this many miles today:</string>
    <string name="train_input_label">I took the train for this many minutes today:</string>


    <!--Buy & Recycle-->
    <string name="plastic_water_bottles">Plastic Bottles:</string>
    <string name="cans">Aluminum Cans:</string>
    <string name="beef">Pounds of Beef:</string>
    <string name="pork">Pounds of Pork:</string>
    <string name="other_meat">Pounds of chicken/fish:</string>
    <string name="glass">Glass Bottles:</string>
    <string name="boxes">Cardboard Boxes:</string>
    <string name="papers">Magazines/Newspapers:</string>
    <string name="electronics">Phone/TV/Computers:</string>

    <string name="title_activity_total_savings">TotalSavings</string>

    <!--TITLE ACTIVITIES-->
    <string name="title_activity_calc_results">Calculator Results</string>

    <string name="title_activity_average_public_savings">AveragePublicSavings</string>
    <string name="title_activity_calculating">Calculating</string>
    <string name="title_activity_splash">My Footprint</string>
    <string name="title_activity_my_totals">My Totals</string>
    <string name="title_activity_my_averages">My Averages</string>
    <string name="title_activity_database_numbers">Production Numbers</string>
    <string name="title_activity_recyclables">Recyclables</string>
    <string name="action_fact_fiction">Fact</string>
    <string name="action_tips_tricks">Tips</string>
    <string name="title_activity_facts">Fact Of The Day</string>
    <string name="title_activity_tips">Tip Of The Week</string>
    <string name="title_activity_calculator_input">Footprint Calculator</string>
    <string name="title_activity_calc_car">Footprint Calculator</string>
    <string name="title_activity_calc_non_motor">Footprint Calculator</string>
    <string name="title_activity_calc_train">Footprint Calculator</string>
    <string name="title_activity_buy_input">Footprint Calculator</string>
    <string name="title_activity_recycling_input">Footprint Calculator</string>

</resources>
