<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_buy_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/bluebground5"
    tools:context="com.wattsup.alissa.myfootprint.BuyInput"
    tools:showIn="@layout/activity_buy_input">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="60dp">

        <TextView android:id="@+id/CalcBuy1"
            style="@style/banner"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/purchases_banner" />

        <LinearLayout android:id="@+id/CalcBuy2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:background="@color/white_transparent"
            android:theme="@style/inputLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:theme="@style/inputLabel"
                android:text="@string/plastic_water_bottles"/>

            <EditText android:id="@+id/CalcBuyInput1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="0"
                android:theme="@style/inputValue" />
        </LinearLayout>

        <LinearLayout android:id="@+id/CalcBuy3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:background="@color/white_transparent"
            android:theme="@style/inputLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:theme="@style/inputLabel"
                android:text="@string/cans"/>

            <EditText android:id="@+id/CalcBuyInput2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="0"
                android:theme="@style/inputValue"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/CalcBuy7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:background="@color/white_transparent"
            android:theme="@style/inputLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:theme="@style/inputLabel"
                android:text="@string/glass"/>

            <EditText android:id="@+id/CalcBuyInput6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="0"
                android:theme="@style/inputValue" />
        </LinearLayout>

        <LinearLayout android:id="@+id/CalcBuy4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:background="@color/white_transparent"
            android:theme="@style/inputLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:theme="@style/inputLabel"
                android:text="@string/beef"/>

            <EditText android:id="@+id/CalcBuyInput3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="0"
                android:theme="@style/inputValue"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/CalcBuy5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:background="@color/white_transparent"
            android:theme="@style/inputLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:theme="@style/inputLabel"
                android:text="@string/pork"/>
            <EditText android:id="@+id/CalcBuyInput4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="0"
                android:theme="@style/inputValue"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/CalcBuy6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal"
            android:background="@color/white_transparent"
            android:theme="@style/inputLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:theme="@style/inputLabel"
                android:text="@string/other_meat"/>

            <EditText android:id="@+id/CalcBuyInput5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="0"
                android:theme="@style/inputValue"/>
        </LinearLayout>

    </LinearLayout>


    <include layout="@layout/calcnavigationbar"/>

</RelativeLayout>
